# ACIRustServer

./: .gitignore  Cargo.toml  README.md  acidoc.md
benches/: benches.rs
databases-dev/config/: a_users.item  config.database  dbs.item  g_users.item  ip.item  port.item  rootDir.item
databases-dev/sensors/: load1.item  load2.item  sensors.database
databases-dev/status/: countdown_end.item  countdown_start.item  led_state.item  load_cell_up_time.item  mode.item  online.item  relay_actuate.item  relay_state.item  shutting_down.item  status.database  up_time.item
databases/command/: command.database  load_cell_known_mass.item  test_begin.item  test_end.item
src/: args.rs  commands.rs  connect.rs  lib.rs  logging.rs  main.rs  socket.rs  version.rs  wrapper.rs
src/commands/: command.rs  mod.rs  tests.rs  verify.rs
src/database/: database.rs  interface.rs  mod.rs  parsing.rs  permissions.rs  tests.rs
src/server/: authentication.rs  interface.rs  mod.rs  server.rs  tests.rs
test-databases/command/: command.database  load_cell_known_mass.item  test_begin.item  test_end.item
test-databases/status/: countdown.item  load_cell_state.item
test-databases/test/: list0.item  list1.item  list2.item  test.database
test-databases/testing/: new_key.item  testing.database
tests/: database.rs
