[package]
name = "aci_server"
version = "0.1.0"
authors = ["CarterTS <carterplasek@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chashmap = "2.2.2"
clap-verbosity-flag = "0.3.1"
log = "0.4.11"
serde_json = "1.0"
simple_logger = "1.11.0"
structopt = "0.3.21"
structopt-derive = "0.4.14"